Fix search input height on Safari

--- a/main.css
+++ b/main.css
@@ -257,8 +257,7 @@ main {
   border: 0;
   appearance: none;
   font: inherit;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0 20px;
   -webkit-appearance: none;
 }
 
